--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ contact:
 - {icon: "ion-logo-twitter", link: "https://twitter.com"}
 - {icon: "ion-logo-facebook", link: "https://facebook.com"}
 - {icon: "ion-logo-dribbble", link: "https://dribbble.com"}
-- {icon: "ion-logo-instagram", link: "https://www.instagram.com/annasunweb/}
+- {icon: "ion-logo-instagram", link: "https://www.instagram.com/annasunweb/"}
 # - {icon: "ion-ios-mail", link: "mailto:forexample@website.com"}
 
 
