--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,12 @@ author:
 # Example of adding a new link to the header - {icon: "ion-logo-github", link: "https://github.com"}
 # Other icons can be found at https://ionicons.com
 contact:
-- {icon: "ion-logo-twitter", link: "https://twitter.com"}
-- {icon: "ion-logo-facebook", link: "https://facebook.com"}
-- {icon: "ion-logo-dribbble", link: "https://dribbble.com"}
-- {icon: "ion-logo-instagram", link: "https://www.instagram.com/annasunweb/"}
-# - {icon: "ion-ios-mail", link: "mailto:forexample@website.com"}
+- {icon: "logo-instagram", link: "https://www.instagram.com/annasunweb/"}
+- {icon: "logo-linkedin", link: "https://www.linkedin.com/in/anna-sun-04162515a"}
+# - {icon: "logo-twitter", link: "https://twitter.com"}
+# - {icon: "logo-facebook", link: "https://facebook.com"}
+# - {icon: "logo-dribbble", link: "https://dribbble.com"}
+# - {icon: "ios-mail", link: "mailto:forexample@website.com"}
 
 
 #-------------------------------
